--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,6 @@ bleach==2.1.2
 bokeh==0.12.13
 boto==2.48.0
 Bottleneck==1.2.1
--e git+git@github.com:EwaGrela/python_exercises.git@aadb1292c8f300da7ce9261be82fb1872d6a582f#egg=cardb&subdirectory=intern/straal-intern-task-2018
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
@@ -38,6 +37,7 @@ dask==0.16.1
 datashape==0.5.4
 decorator==4.2.1
 distributed==1.20.2
+dj-database-url==0.5.0
 Django==2.0.2
 docutils==0.14
 entrypoints==0.2.3
@@ -51,6 +51,7 @@ gevent==1.2.2
 glob2==0.6
 gmpy2==2.0.8
 greenlet==0.4.12
+gunicorn==19.8.1
 h5py==2.7.1
 heapdict==1.0.0
 html5lib==1.0.1
@@ -173,6 +174,7 @@ urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
+whitenoise==3.3.1
 widgetsnbextension==3.1.0
 wrapt==1.10.11
 xlrd==1.1.0
